--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,19 @@
-Hello this is the first deployment from capistrano-locally
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Pravesh World</title>
+</head>
+
+<body>
+
+  <h1>Welcome to Our Company</h1>
+  <h2>Web Site Main Ingredients:</h2>
+
+  <p>Pages (HTML)</p>
+  <p>Style Sheets (CSS)</p>
+  <p>Computer Code (JavaScript)</p>
+  <p>Live Data (Files and Databases)</p>
+
+</body>
+</html>
