--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
 
 <body>
 
-  <h1>Welcome to Our Company</h1>
-  <h2>Web Site Main Ingredients:</h2>
+  <h1>Welcome to Pravesh's Land</h1>
+  <h2>Skills:</h2>
 
-  <p>Pages (HTML)</p>
-  <p>Style Sheets (CSS)</p>
-  <p>Computer Code (JavaScript)</p>
-  <p>Live Data (Files and Databases)</p>
+  <p> Linux </p>
+  <p>AWS </p>
+  <p>Newly added - Ruby on Rails</p>
+  <p>9506016647</p>
 
 </body>
 </html>
