--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <p> Linux </p>
   <p>AWS </p>
   <p>Newly added - Ruby on Rails</p>
-  <p>call me for more 9506016647</p>
+  <p>apko bhi aisa chahiye toh mujhe contact kro </p>
 
 </body>
 </html>
